--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="https://www.linkedin.com/in/piyush-anand-958b48222/"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://github.com/BlasterCO7"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-instagram' ></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://twitter.com/PiyushAnand9999"><i class='bx bxl-twitter' ></i></a>
             </div>
             <div class="btn-group">
                 <a href="https://www.linkedin.com/in/piyush-anand-958b48222/" class="btn">Hire</a>
@@ -65,7 +65,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                    <div class="timeline-date">2022</div>
+                    <div class="timeline-date">2021-2025</div>
                     <div class="timeline-content">
                         <h3>University</h3>
                         <p>Currently pursuing Chemical Engineering at IIT Bombay, I'm deeply committed to finding sustainable solutions to complex chemical problems. Alongside my engineering studies, I have a fervent interest in programming, particularly in the realms of AI and machine learning, where I see immense potential for transforming industries. Simultaneously, I'm intensively learning about finance, driven by a passion for understanding markets and financial analysis, while preparing for the CFA exams. My diverse interests converge in a quest for innovation and a desire to make a positive impact on the world.</p>
@@ -74,7 +74,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                    <div class="timeline-date">2021</div>
+                    <div class="timeline-date">2023</div>
                     <div class="timeline-content">
                         <h3>Internship</h3>
                         <p>During my internship at Distinct Horizon, I focused on expanding their customer reach through strategic content creation, effectively enhancing their online presence. Additionally, at Shiva Pharma, I played a pivotal role in revamping their pivoyl chloride scrubbing section by providing innovative solutions tailored to their needs. These experiences have honed my problem-solving skills and strengthened my ability to deliver tangible results, further fueling my passion for making meaningful contributions in both the marketing and chemical engineering domains.
@@ -89,7 +89,7 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                    <div class="timeline-date">2021</div>
+                    <div class="timeline-date">2024</div>
                     <div class="timeline-content">
                         <h3>Jobs</h3>
                         <p>Seeking job opportunities to apply my skills in chemical engineering, marketing, and programming, with a focus on sustainable solutions and AI/ML. Experienced in marketing strategies and providing innovative solutions in chemical engineering.e</p>
@@ -152,10 +152,10 @@
 
     <footer class="footer">
         <div class="social">
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="https://www.linkedin.com/in/piyush-anand-958b48222/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/BlasterCO7"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-instagram' ></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://twitter.com/PiyushAnand9999"><i class='bx bxl-twitter' ></i></a>
         </div>
         <ul class="list">
             <li>
